<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/menu_terms"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/terms_icon"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_45sdp"
                android:gravity="center"
                android:text="@string/termsOfServiceSummery"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.0dip"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/square_white"
                    android:drawableEnd="@drawable/right_icon"
                    android:foreground="?selectableItemBackground"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/menu_terms"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_12sdp"

                    app:textAllCaps="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/square_white"
                    android:drawableEnd="@drawable/right_icon"
                    android:foreground="?selectableItemBackground"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/privacy_policy"
                    android:textSize="@dimen/_12sdp"

                    app:textAllCaps="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAgreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/square_white"
                    android:drawableEnd="@drawable/right_icon"
                    android:foreground="?selectableItemBackground"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/permission_disclosure"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_12sdp"

                    app:textAllCaps="true" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/addeptContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/accept_and_continue"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>